--- a/server/views/detail.css
+++ b/server/views/detail.css
@@ -6,13 +6,21 @@
   gap: 2rem;
 
   /* tijdelijk tot er een beter oplossing gevonden kan worden met grid */
-  margin-inline:clamp(1rem, -9rem + 22.8571vw, 4rem);;
+  /* margin-inline: max(1.5rem,((100%-75rem)/2)); */
+  /* background-color: aquamarine; */
+  width: min(100% - 4rem, 90rem);
+  /* width: max(75%); */
+  margin-inline: auto;
+
 
   .relaties-container {
     display: block;
-  h2 {
-    color: var(--color-text);
-  }
+
+    h2 {
+      color: var(--color-title);
+      font-size: 1.5em;
+    }
+
     ul {
       display: flex;
       flex-direction: column;
